--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-query": "^5.90.16",
     "@vitejs/plugin-react": "^5.1.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
